# CLOUD-COMPUTING---Actividad-Semana-2

./: .gitignore  01_preprocesamiento.ipynb  02_entrenamiento_modelo.ipynb  02_modeloML.ipynb  03_deploy_api_azure.ipynb  04_inferencia_api.ipynb  README.md  data_selected.csv  main.py  pyproject.toml  random_forest_model.pkl  score.py  selected_columns.json
