[project]
name = "cloud-computing-actividad-semana-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "kagglehub",
    "pandas",
    "numpy",
    "scikit-learn",
    "matplotlib>=3.10.1",
    "seaborn>=0.13.2",
]
