[project]
name = "cloud-computing-actividad-semana-2"
version = "0.1.0"
description = "Actividad de computo en la nube semana 2"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "kagglehub",
    "pandas",
    "numpy",
    "scikit-learn",
    "azureml",
]
